--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,20 @@
-name: deployments
+name: "Build & Release"
 on:
+  pull_request:
+    branches:
+      - dev
+      - stage
   push:
-    branches: [master, staging, dev]
+    branches: 
+      - master
+      - stage
+      - dev
 
 jobs:
   deployDev:
-    name: 'Deploy to dev environment'
+    name: "Deploy to Dev Environment"
     if: github.event.ref == 'refs/heads/dev'
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     environment:
       name: development
     steps:
@@ -17,24 +24,23 @@ jobs:
           java-version: '12.x'
       - uses: SpicyPizza/create-envfile@v1
         with:
-          envkey_ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
-          envkey_API_URL: ${{ secrets.API_URL }}
+          envkey_DEV_DOMAIN: ${{ secrets.DEV_DOMAIN }}
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
-          flutter-version: '2.5.x'
+          flutter-version: '3.10.5'
       - run: flutter pub get
       - run: flutter clean
-      - run: flutter build apk
+      - run: flutter build apk --debug ---split-per-abi
       - uses: actions/upload-artifact@v1
         with:
           name: apk-release
           path: build/app/outputs/flutter-apk/app-release.apk
 
   deployProd:
-    name: 'Deploy to production environment'
+    name: 'Deploy to Production environment'
     if: github.event.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     environment:
       name: production
     steps:
@@ -44,12 +50,11 @@ jobs:
           java-version: '12.x'
       - uses: SpicyPizza/create-envfile@v1
         with:
-          envkey_ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
-          envkey_API_URL: ${{ secrets.API_URL }}
+          envkey_DEV_DOMAIN: ${{ secrets.DEV_DOMAIN }}
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
-          flutter-version: '2.5.x'
+          flutter-version: '3.10.5'
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build apk
