--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
   deployDev:
     name: "Deploy to Dev Environment"
     if: github.event.ref == 'refs/heads/dev'
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     environment:
       name: development
     steps:
@@ -40,7 +40,7 @@ jobs:
   deployProd:
     name: 'Deploy to Production environment'
     if: github.event.ref == 'refs/heads/master'
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     environment:
       name: production
     steps:
