--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           flutter-version: '3.10.5'
       - run: flutter pub get
       - run: flutter clean
-      - run: flutter run -t lib/main_dev.dart -d all
+      - run: flutter run -t lib/main_dev.dart --flavor dev -d all
       - run: flutter build apk 
       - uses: actions/upload-artifact@v1
         with:
