--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,12 +32,11 @@ jobs:
           flutter-version: '3.10.5'
       - run: flutter clean
       - run: flutter pub get
-      - run: flutter run -t lib/main_dev.dart --flavor dev
-      - run: flutter build appbundle
+      - run: flutter build apk --debug
       - uses: actions/upload-artifact@v1
         with:
-          name: apk-release
-          path: build/app/outputs/bundle/release/app-release.aab
+          name: apk-dev-debug
+          path: build/app/outputs/flutter-apk/app-dev-debug.apk
 
   deployProd:
     name: 'Deploy to Production environment'
