--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,8 @@ jobs:
           flutter-version: '3.10.5'
       - run: flutter clean
       - run: flutter pub get
-      - run: flutter build apk --debug
-      - name: Push to Release
+      - run: flutter build apk --debug --split-per-abi
+      - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/apk/debug/*"
