--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: '12.x'
-      - uses: SpicyPizza/create-envfile@v1
+      - uses: SpicyPizza/create-envfile@v2.0
         with:
           envkey_DEV_DOMAIN: ${{ secrets.DEV_DOMAIN }}
           file_name: .env_dev
@@ -52,14 +52,16 @@ jobs:
       - uses: SpicyPizza/create-envfile@v1
         with:
           envkey_DEV_DOMAIN: ${{ secrets.DEV_DOMAIN }}
+          file: .env_prod
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
           flutter-version: '3.10.5'
       - run: flutter pub get
       - run: flutter clean
-      - run: flutter build apk
-      - uses: actions/upload-artifact@v1
+      - run: flutter pub get
+      - run: flutter build apk --debug --split-per-abi
+      - name: Push to Releases
+        uses: ncipollo/release-action@v1
         with:
-          name: apk-release
-          path: build/app/outputs/flutter-apk/app-release.apk
+          artifacts: "build/app/outputs/apk/debug/*"
